--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/starter-kit": "^3.7.2",
     "@xyflow/react": "^12.9.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.552.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
